# ha-localizer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  home_assistant.rs  lib.rs  main.rs
