[package]
name = "ha-localizer"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.43"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"

[profile.release]
strip = true
lto = true
